--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <title>Testimonials Slider</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
                 “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ”
             </blockquote>
             <cite><em>Tanya Sinclair</em> UX Engineer </cite>
+            <img src="./images/image-tanya.jpg" alt="A professional photo of Tanya Sinclair">
         </section>
 
         <section>
@@ -20,6 +22,7 @@
                 “ If you want to lay the best foundation possible I’d recommend taking this course. The depth the instructors go into is incredible. I now feel so confident about starting up as a professional developer. ”
             </blockquote>
             <cite><em>John Tarkpor</em>Junior Front-end Developer</cite>
+            <img src="./images/image-john.jpg" alt="A professional photo of John Tarkpor">
         </section>
 
     </main>
