--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             </blockquote>
             <cite><em>Tanya Sinclair</em> UX Engineer </cite>
             <img src="./images/image-tanya.jpg" alt="A professional photo of Tanya Sinclair">
+            <button><img src="./images/icon-prev.svg" alt=""></button>
+            <button><img src="./images/icon-next.svg" alt=""></button>
         </section>
 
         <section>
