hide second slide

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button><img src="./images/icon-next.svg" alt=""></button>
         </section>
 
-        <section>
+        <section class="second_slide"> 
             <blockquote>
                 “ If you want to lay the best foundation possible I’d recommend taking this course. The depth the instructors go into is incredible. I now feel so confident about starting up as a professional developer. ”
             </blockquote>
