finish initial style of left_col

--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
 
         <section class="slide first_slide">
             <div class="right_col">
-            <blockquote>
-                “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend
-                this course enough. I’m now in the job of my dreams and so excited about the future. ”
-            </blockquote>
-            <cite><em>Tanya Sinclair</em> UX Engineer </cite>
-        </div>
+                <div class="quote">
+                    <img src="./images/pattern-quotes.svg" alt="">
+                </div>
+
+
+                <blockquote>
+                    “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t
+                    recommend
+                    this course enough. I’m now in the job of my dreams and so excited about the future. ”
+                </blockquote>
+                <cite><em>Tanya Sinclair</em> UX Engineer </cite>
+                <div class="curve">
+                    <img src="./images/pattern-curve.svg" alt="">
+                </div>
+            </div>
             <div class="left_col">
                 <img src="./images/image-tanya.jpg" alt="A professional photo of Tanya Sinclair">
                 <button><img src="./images/icon-prev.svg" alt=""></button>
