finish initial css, not repsonsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
 
         <section class="slide first_slide">
-            <div class="right_col">
+            <div class="left_col">
                 <div class="quote">
                     <img src="./images/pattern-quotes.svg" alt="">
                 </div>
@@ -25,14 +25,18 @@
                     this course enough. I’m now in the job of my dreams and so excited about the future. ”
                 </blockquote>
                 <cite><em>Tanya Sinclair</em> UX Engineer </cite>
-                <div class="curve">
-                    <img src="./images/pattern-curve.svg" alt="">
-                </div>
             </div>
-            <div class="left_col">
-                <img src="./images/image-tanya.jpg" alt="A professional photo of Tanya Sinclair">
-                <button><img src="./images/icon-prev.svg" alt=""></button>
-                <button><img src="./images/icon-next.svg" alt=""></button>
+            <div class="right_col">
+                <div>
+                    <img class="portrait" src="./images/image-tanya.jpg" alt="A professional photo of Tanya Sinclair">
+                </div>
+
+                <div class="button-container">
+                    <button><img src="./images/icon-prev.svg" alt=""></button>
+                    <button><img src="./images/icon-next.svg" alt=""></button>
+                </div>
+
+
             </div>
         </section>
 
