--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <main>
+    <main class="flex_container">
 
-        <section class="slide first_slide">
-            <div class="left_col">
+        <section class="slide first_slide flex_container">
+            <div class="left_col flex_container">
                 <div class="quote">
                     <img src="./images/pattern-quotes.svg" alt="">
                 </div>
@@ -26,12 +26,12 @@
                 </blockquote>
                 <cite><em>Tanya Sinclair</em> UX Engineer </cite>
             </div>
-            <div class="right_col">
+            <div class="right_col flex_container">
                 <div>
-                    <img class="portrait" src="./images/image-tanya.jpg" alt="A professional photo of Tanya Sinclair">
+                    <img class="portrait shadow" src="./images/image-tanya.jpg" alt="A professional photo of Tanya Sinclair">
                 </div>
 
-                <div class="button-container">
+                <div class="button-container flex_container shadow">
                     <button><img src="./images/icon-prev.svg" alt=""></button>
                     <button><img src="./images/icon-next.svg" alt=""></button>
                 </div>
