--- a/index.html
+++ b/index.html
@@ -10,46 +10,19 @@
 </head>
 
 <body>
-    <main class="flex_container">
 
-        <section class="slide first_slide flex_container">
-            <div class="left_col flex_container">
-                <div class="quote">
-                    <img src="./images/pattern-quotes.svg" alt="">
-                </div>
-
-
-                <blockquote>
-                    “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t
-                    recommend
-                    this course enough. I’m now in the job of my dreams and so excited about the future. ”
-                </blockquote>
-                <cite><em>Tanya Sinclair</em> UX Engineer </cite>
-            </div>
-            <div class="right_col flex_container">
-                <div>
-                    <img class="portrait shadow" src="./images/image-tanya.jpg" alt="A professional photo of Tanya Sinclair">
-                </div>
-
-                <div class="button-container flex_container shadow">
-                    <button><img src="./images/icon-prev.svg" alt=""></button>
-                    <button><img src="./images/icon-next.svg" alt=""></button>
-                </div>
-
-
-            </div>
-        </section>
-
-        <section class="slide second_slide">
+    <main>
+        <section>
             <blockquote>
-                “ If you want to lay the best foundation possible I’d recommend taking this course. The depth the
-                instructors go into is incredible. I now feel so confident about starting up as a professional
-                developer. ”
+                “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ”
             </blockquote>
-            <cite><em>John Tarkpor</em>Junior Front-end Developer</cite>
-            <img src="./images/image-john.jpg" alt="A professional photo of John Tarkpor">
+            <cite><em>Tanya Sinclair</em>UX Engineer</cite>
         </section>
-
+        <section>
+            <img src="./images/image-tanya.jpg" alt="a photo of Tanya">
+            <button><img src="./images/icon-prev.svg" alt=""></button>
+            <button><img src="./images/icon-next.svg" alt=""></button>
+        </section>
     </main>
 
 </body>
