--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="flex">
 
-    <main>
+    <main class="flex">
         <section>
             <blockquote>
                 “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ”
