--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <body class="flex">
 
     <main class="flex">
-        <section>
+        <section class="quote-section">
+            <img class="quotes" src="./images/pattern-quotes.svg" alt="">
             <blockquote>
+                
                 “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ”
             </blockquote>
-            <cite><em>Tanya Sinclair</em>UX Engineer</cite>
+            <cite><em>Tanya Sinclair</em> UX Engineer</cite>
         </section>
-        <section>
+        <section class="portrait-section">
             <img src="./images/image-tanya.jpg" alt="a photo of Tanya">
             <button><img src="./images/icon-prev.svg" alt=""></button>
             <button><img src="./images/icon-next.svg" alt=""></button>
