--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
         <section class="quote-section">
             <img class="quotes" src="./images/pattern-quotes.svg" alt="">
             <blockquote>
-                
-                “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ”
+
+                “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend
+                this course enough. I’m now in the job of my dreams and so excited about the future. ”
             </blockquote>
             <cite><em>Tanya Sinclair</em> UX Engineer</cite>
         </section>
-        <section class="portrait-section">
-            <img src="./images/image-tanya.jpg" alt="a photo of Tanya">
-            <button><img src="./images/icon-prev.svg" alt=""></button>
-            <button><img src="./images/icon-next.svg" alt=""></button>
+        <section class="portrait-section flex">
+            <img class="portrait shadow" src="./images/image-tanya.jpg" alt="a photo of Tanya">
+            <div class="button-container shadow flex">
+                <button><img src="./images/icon-prev.svg" alt=""></button>
+                <button><img src="./images/icon-next.svg" alt=""></button>
+            </div>
         </section>
     </main>
 
