--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
     <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <title>Testimonials Slider</title>
+    
 </head>
 
 <body class="flex">
 
     <main class="flex">
-        <section class="quote-section">
+        <div class="quote-section">
             <img class="quotes" src="./images/pattern-quotes.svg" alt="">
             <blockquote>
 
                 “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend
                 this course enough. I’m now in the job of my dreams and so excited about the future. ”
             </blockquote>
-            <cite><em>Tanya Sinclair</em> UX Engineer</cite>
-        </section>
-        <section class="portrait-section flex">
+            <cite><em id="name">Tanya Sinclair</em> <span id="title"> UX Engineer </span></cite>
+        </div>
+        <div class="portrait-section flex">
             <img class="portrait shadow" src="./images/image-tanya.jpg" alt="a photo of Tanya">
             <div class="button-container shadow flex">
-                <button><img src="./images/icon-prev.svg" alt=""></button>
-                <button><img src="./images/icon-next.svg" alt=""></button>
+                <button><img id="prev" src="./images/icon-prev.svg" alt=""></button>
+                <button><img id="next" src="./images/icon-next.svg" alt=""></button>
             </div>
-        </section>
+        </div>
     </main>
 
 </body>
-
+<script src="./script/script.js"></script>
 </html>
