switch function works but having trouble with image swap

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="flex">
         <div class="quote-section">
             <img class="quotes" src="./images/pattern-quotes.svg" alt="">
-            <blockquote>
+            <blockquote id="quote">
 
                 “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend
                 this course enough. I’m now in the job of my dreams and so excited about the future. ”
@@ -23,7 +23,7 @@
             <cite><em id="name">Tanya Sinclair</em> <span id="title"> UX Engineer </span></cite>
         </div>
         <div class="portrait-section flex">
-            <img class="portrait shadow" src="./images/image-tanya.jpg" alt="a photo of Tanya">
+            <img id="image" class="portrait shadow" src="./images/image-tanya.jpg" alt="a photo of Tanya">
             <div class="button-container shadow flex">
                 <button><img id="prev" src="./images/icon-prev.svg" alt=""></button>
                 <button><img id="next" src="./images/icon-next.svg" alt=""></button>
