--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="portrait-section flex">
             <img id="image" class="portrait shadow" src="./images/image-tanya.jpg" alt="a photo of Tanya">
             <div class="button-container shadow flex">
-                <button><img id="prev" src="./images/icon-prev.svg" alt=""></button>
-                <button><img id="next" src="./images/icon-next.svg" alt=""></button>
+                <button name="previous"><img id="prev" src="./images/icon-prev.svg" alt=""></button>
+                <button><img name="next" id="next" src="./images/icon-next.svg" alt=""></button>
             </div>
         </div>
     </main>
